data/derived/comb/progs/unify/prog1596.ml.out
Characters 102-105:
  | hd :: tl -> (append (xs1 :: hd) tl) in
                         ^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
